--- a/index.html
+++ b/index.html
@@ -2,23 +2,58 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VUE.js</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VUE.js</title>
 </head>
 
 <body>
-    <div id="app"></div>
+  <div id="app"></div>
 
-    <script type="importmap">
+  <script type="importmap">
         {
           "imports": {
             "vue": "./js/vue.esm-browser.js"
           }
         }
       </script>
-    <script type="module" src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
+
+<style>
+  html,
+  body {
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  #app,
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  button {
+    margin-top: 24px;
+    border: none;
+    background-color: white;
+    padding: 8px 24px;
+    border-radius: 12px;
+  }
+
+  .inactive {
+    background-color: #ff3232;
+  }
+
+  .active {
+    background-color: #5bd600;
+  }
+</style>
 
 </html>
